# socca

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  codemeta.json  pyproject.toml  release-please-config.json  test2.py
.github/workflows/: ci.yml  docs.yml  lint.yml  release-please.yml
data/tutorial/: tutorial_mock.fits  tutorial_psf.fits
docs/source/: changelog.md  citation.md  citing.md  conf.py  contribute.md  faq.md  index.md  index.rst  installation.md  intro.md  models.md  priors.md  quickstart.md  tutorial_data.md  tutorial_models.md  tutorial_noise.md  tutorial_priors.md  tutorial_quickstart.md
docs/source/_scripts/: generate_citation.py
docs/source/_static/: custom.css  custom.css_1  custom.css_awesome  custom.css_shibuya_1  custom.css_shibuya_2
docs/source/api/: data.md  fitting.md  index.md  models.md  noise.md  plotting.md  priors.md  utils.md
docs/source/api/fitting/: base.md  index.md  methods.md
docs/source/api/models/: base.md  bridge.md  disk.md  index.md  misc.md  radial.md
docs/source/api/pool/: index.md  mp.md  mpi.md
docs/source/models/: link.md  zoo.md
docs/source/tutorials/: tutorial_components.md  tutorial_data.md  tutorial_fitting.md  tutorial_models.md  tutorial_noise.md  tutorial_parallel.md  tutorial_plotting.md  tutorial_priors.md  tutorial_quickstart.md
examples/: 01_sersic.py  02_multi_sersic.py
examples/input/: exp_convoluted.fits
socca/: __init__.py  core.py  data.py  fitting.py  models.py  noise.py  plotting.py  priors.py  utils.py
socca/fitting/: __init__.py  base.py
socca/fitting/methods/: __init__.py  dynesty.py  emcee.py  nautilus.py  numpyro.py  optimizer.py  pocomc.py  utils.py
socca/models/: __init__.py  base.py  config.py
socca/models/bridge/: __init__.py  base.py
socca/models/disk/: __init__.py  base.py  vertical.py
socca/models/misc/: __init__.py  background.py  point.py
socca/models/radial/: __init__.py  base.py  beta.py  exponential.py  gaussian.py  gnfw.py  power.py  sersic.py  tophat.py  truncation.py
socca/models/radial/gnfw/: __init__.py  emulator.py  integral.py  model.py
socca/models/radial/gnfw/emulate/: __init__.py  __main__.py  config.py  data.py  emulator.py  gnfw_emulator.dill  model.py  plotting.py  train.py
socca/models/radial/gnfw/emulator/: __init__.py  config.py  data.py  emulator.py  io.py  model.py  plot.py  trainer.py
socca/models/radial/gnfw/emulator/pretrained/: gnfw.dill
socca/pool/: __init__.py  mp.py  mpi.py
tests/: __init__.py  conftest.py  test_data.py  test_fitting.py  test_models.py  test_noise.py  test_pool.py  test_priors.py  test_utils.py
