[project]
name = "socca"
version = "0.1.0"
description = "Source Characterization using a Composable Analysis"
authors = [{name="Luca Di Mascolo",email="lucadimascolo@gmail.com"}]
license = {"file" = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["astronomy", "modeling", "bayesian", "jax"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "astropy",
    "pyregion",
    "reproject",
    "jax",
    "jaxlib",
    "quadax",
    "numpyro",
    "dynesty",
    "nautilus-sampler",
    "pocomc",
    "corner",
    "dill",
    "h5py"
]

[project.urls]
Homepage = "https://github.com/lucadimascolo/socca"
Documentation = "https://lucadimascolo.github.io/socca"
Repository = "https://github.com/lucadimascolo/socca"
Issues = "https://github.com/lucadimascolo/socca/issues"

[tool.setuptools.packages.find]
include = ["socca*"]
exclude = ["data*","examples*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"