[project]
name = "socca"
version = "1.0.0"
description = "Source Characterization using a Composable Analysis"
authors = [{name="Luca Di Mascolo",email="lucadimascolo@gmail.com"}]
license = {"file" = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["astronomy", "modeling", "bayesian", "jax"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "astropy",
    "pyregion",
    "reproject",
    "jax",
    "jaxlib",
    "quadax",
    "emcee",
    "numpyro",
    "dynesty",
    "nautilus-sampler",
    "pocomc",
    "corner",
    "dill",
    "h5py",
    "loky"
]

[project.urls]
Homepage = "https://github.com/lucadimascolo/socca"
Documentation = "https://lucadimascolo.github.io/socca"
Repository = "https://github.com/lucadimascolo/socca"
Issues = "https://github.com/lucadimascolo/socca/issues"

[tool.setuptools.packages.find]
include = ["socca*"]
exclude = ["data*","examples*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
constraint-dependencies = [
    "pyarrow>=10,<20",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 79
exclude = [
    "examples",
    "data",
]

[tool.ruff.lint]
select = [
    "D",  # docstring checks
]

ignore = [
    "D104",  # "Missing docstring in public package"
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (run with: pytest -m slow)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["socca"]
omit = [
    "socca/plotting.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]